--- a/just/justfile
+++ b/just/justfile
@@ -7,6 +7,7 @@ set dotenv-load
 # Import top-level recipes
 import 'dev.just'
 import 'testing.just'
+mod cicd
 
 # List all available recipes
 default:
