--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@ stages:
   - build
   - test
   - pages
+
 variables:
   IMAGE_NAME: go-template
   IMAGE_TAG: latest
@@ -14,8 +15,11 @@ build-image:
   image: docker:latest
   services:
     - docker:dind
+  before_script:
+    - apk add --no-cache curl bash
+    - curl --proto '=https' --tlsv1.2 -sSf https://just.systems/install.sh | bash -s -- --to /usr/local/bin
   script:
-    - docker build -t $IMAGE_NAME:$IMAGE_TAG -f docker/Dockerfile .
+    - just cicd::build
     - docker save $IMAGE_NAME:$IMAGE_TAG > image.tar
   artifacts:
     paths:
@@ -40,7 +44,7 @@ test-template:
     - apk add --no-cache git go golangci-lint curl bash
     - curl --proto '=https' --tlsv1.2 -sSf https://just.systems/install.sh | bash -s -- --to /usr/local/bin
   script:
-    - just test-template
+    - just cicd::test-template
   rules:
     - if: $CI_PIPELINE_SOURCE == "merge_request_event"
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
@@ -49,9 +53,11 @@ test-template:
 pages:
   stage: pages
   image: ghcr.io/astral-sh/uv:python3.12-bookworm
+  before_script:
+    - apt-get update && apt-get install -y curl
+    - curl --proto '=https' --tlsv1.2 -sSf https://just.systems/install.sh | bash -s -- --to /usr/local/bin
   script:
-    - uv sync
-    - uv run mkdocs build
+    - just cicd::pages
   artifacts:
     paths:
       - public
