refactor: restructure justfiles to use proper module syntax per /just skill
- Move module definitions to root justfile with explicit paths
- Remove intermediary just/justfile files
- Add [group()] attributes for recipe organization
- Use [no-cd] for recipes that need project root
- Add [private] for internal helper recipes
- Fix module dependencies to be self-contained

--- a/copier.yml
+++ b/copier.yml
@@ -15,9 +15,10 @@ tool_name:
 ci_platform:
   type: str
   help: "CI/CD platform for automated builds and deployments"
+  default: gitlab
   choices:
-    gitlab: "GitLab CI"
-    github: "GitHub Actions"
+    "GitLab CI": gitlab
+    "GitHub Actions": github
 
 gitlab_url:
   type: str
