feat: add self_update config option and uv/copier usage instructions
- Add self_update boolean option (default: true) to copier.yml
- Make update.go conditional on self_update option
- Update README with uvx copier copy instructions
- Update installation.md with uv as primary method
- Document self_update option in template-reference.md

--- a/copier.yml
+++ b/copier.yml
@@ -37,3 +37,8 @@ github_registry:
   when: "{{ ci_platform == 'github' }}"
   help: "GitHub Container Registry path"
   default: "ghcr.io/{{ project_name }}"
+
+self_update:
+  type: bool
+  help: "Include self-update command (downloads latest release from GitHub/GitLab)"
+  default: true
