fix: correct go.mod module path for GitHub projects and add CI debug
- Make go.mod module path conditional based on ci_platform
- Use github.com/<registry>/src/<tool> for GitHub projects
- Use <gitlab_url>/<project>/src/<tool> for GitLab projects
- Add debug step to CI workflow to diagnose docker directory issue

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,17 @@ jobs:
       - name: Install just
         uses: extractions/setup-just@v2
 
+      - name: Debug directory contents
+        run: |
+          echo "=== Current directory ==="
+          pwd
+          echo "=== Directory listing ==="
+          ls -la
+          echo "=== Docker directory ==="
+          ls -la docker/
+          echo "=== Docker version ==="
+          docker version
+
       - name: Build image
         run: just cicd::build
 
