--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,17 +14,6 @@ jobs:
       - name: Install just
         uses: extractions/setup-just@v2
 
-      - name: Debug directory contents
-        run: |
-          echo "=== Current directory ==="
-          pwd
-          echo "=== Directory listing ==="
-          ls -la
-          echo "=== Docker directory ==="
-          ls -la docker/
-          echo "=== Docker version ==="
-          docker version
-
       - name: Build image
         run: just cicd::build
 
@@ -43,9 +32,9 @@ jobs:
           go-version: '1.23'
 
       - name: Install golangci-lint
-        uses: golangci/golangci-lint-action@v6
-        with:
-          install-only: true
+        run: |
+          curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin
+          echo "$(go env GOPATH)/bin" >> $GITHUB_PATH
 
       - name: Test template
         run: just cicd::test-template
