--- a/.github/workflows/test-template.yml
+++ b/.github/workflows/test-template.yml
@@ -137,9 +137,9 @@ jobs:
           go-version: '1.23'
 
       - name: Install golangci-lint
-        uses: golangci/golangci-lint-action@v6
-        with:
-          install-only: true
+        run: |
+          curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin
+          echo "$(go env GOPATH)/bin" >> $GITHUB_PATH
 
       - name: Generate project
         run: |
